# dpg

TypeScript/: .gitignore  package.json  tsconfig.json
TypeScript/app/: gilded-rose.ts
TypeScript/test/: gilded-rose.spec.ts  golden-master-text-test.ts
go/: coverage.out
python/: .gitignore  gilded_rose.py  pyproject.toml  test_gilded_rose.py
rust/: Cargo.toml
rust/src/: gildedrose.rs  main.rs  unit_tests.rs
