[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Athul Muralidhar <athul.m68@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
